--- a/css/footerCookies.css
+++ b/css/footerCookies.css
@@ -1,6 +1,6 @@
 /*####################################################################### cookies ##################################################################*/
 /*####################################################################### cookies ##################################################################*/
-/* .btncookie {
+.btncookie {
   box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.63);
   color: rgb(29, 28, 28);
   padding: 1em 0 1em;
@@ -20,7 +20,7 @@
 }
 .sm_hidden {
   visibility: hidden;
-} */
+}
 /*####################################################################### FOOTER ###################################################################*/
 /*####################################################################### FOOTER ###################################################################*/
 footer,
@@ -93,6 +93,12 @@ footer {
   color: #d70019;
   padding: 20px;
   border-top: 2px #dbaa6a solid;
+}
+.mentionsLegalesContener h2{
+width: 200px;
+border-radius: 50px 50px 0px 0px;
+text-align: center;
+background-color: black;
 }
 .mentionsLegalesContener {
   width: 90%;
