--- a/css/menu.css
+++ b/css/menu.css
@@ -27,6 +27,7 @@ main {
 /* ################################################################## TITRES ################################################################ */
 .titre {
   padding-top: 20px;
+  font-weight: 400;
 }
 .div_titre {
   display: flex;
@@ -338,4 +339,4 @@ main {
 		scroll-behavior: auto;
 	}
 }
-}
+
