--- a/css/fournisseurs.css
+++ b/css/fournisseurs.css
@@ -8,7 +8,7 @@ main {
 header {
 	margin-bottom: 100px !important ;
 }
-.h2Scroll{
+h2 {
 	padding: 20px;
 	width: 200px;
 	border-radius: 50px 50px 0px 0px;
